# QA-CLI-TOOL

./: .gitignore  README.md  pyproject.toml
examples/: README.md  bug_register_negative.md  bug_register_negative_ai.md  checklist_register_negative.md
qa_cli/: cli.py  runner.py
qa_cli/ai/: openai_bug_enhancer.py
qa_cli/data/: password_cases.py  register_cases.py  registration_cases.py
qa_cli/pages/: base_page.py  heroku_login_page.py  input_safety.py  login_page.py  page_factory.py  register_page.py  waits.py
qa_cli/scenarios/: __init__.py  auth_login.py  auth_register.py  registry.py
qa_cli/sites/: profiles.py
tests/: conftest.py  test_engine.py
