[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-cli-tool"
version = "0.1.0"
description = "QA CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
  "selenium>=4.20",
]

[project.scripts]
qa-cli = "qa_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["qa_cli*","tests*"]

[tool.pytest.ini_options]
addopts = "-q"